TestIngress/templates/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-test
  labels:
    istio-injection: enabled
