TestIngress/templates/gateway.yaml


apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: first-gateway
  namespace: nginx-test
spec:
  gatewayClassName: traefik
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All


---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-route
  namespace: nginx-test
spec:
  parentRefs:
  - name: first-gateway
    namespace: nginx-test
    sectionName: http
  hostnames:
  - "first-http-route.localhost.sslip.io"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    backendRefs:
    - name: nginx-service
      port: 80
