TestIngress/templates/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-route
  namespace: nginx-test
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - "nginx.localhost"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    backendRefs:
    - name: nginx-service
      port: 80
