TestIngress/templates/kiali.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kiali-route
  namespace: istio-system
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - "kiali.localhost"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    backendRefs:
    - name: kiali
      port: 20001
